bugfix breadcrumb on mobile

--- a/src/css/components/_box.scss
+++ b/src/css/components/_box.scss
@@ -12,6 +12,7 @@
 	transition-duration:0.3s;
 	transition-property:opacity, background-color, box-shadow, border;
 	user-select:none;
+	overflow:hidden;
 }
 .tbox:hover{
 	border-color:#fff;
