--- a/src/css/responsive/_mobile.scss
+++ b/src/css/responsive/_mobile.scss
@@ -105,9 +105,6 @@
     padding: 5px 5px;
     height: auto;
   }
-  .breadcrumb a{
-    width: 100%;
-  }
   .breadcrumb2{
     padding: 5px 5px;
     height: auto;
